fs_test/example_traces/interp_warn_dump_failed-check.trace.expected
# processing file 'example_traces/interp_warn_dump_failed-check.trace' ...
# 
# Fatal error: File "example_traces/interp_warn_dump_failed-check.trace", line 6, characters 5-20:
# dump not allowed in trace
# processing file 'example_traces/interp_warn_dump_failed-check.trace' failed
